--- a/src/index.html
+++ b/src/index.html
@@ -15,32 +15,30 @@
     />
     <link rel="stylesheet" href="https://use.typekit.net/iei0xqi.css" />
   </head>
-  <body
-    class="cursor-mincursor"
-
-  >
-  <main class="overflow-clip">
-    <div class="bg-brun [&_h2]:text-beige"
-    style="background-image: url(img/background.webp);"
-    >
-      <!-- section 1-->
-      <section>
-        <div class="container min-w-fit">
-          <img
-            src="img/heroimg.webp"
-            alt="hero_img"
-            class="h-screen w-screen"
-          />
-          <h1 class="centered text-5xl font-extrabold text-brun">
-            Uperfekt er perfekt
-          </h1>
-        </div>
-      </section>
+  <body class="cursor-mincursor">
+    <main class="overflow-clip">
+      <div
+        class="bg-brun [&_h2]:text-beige"
+        style="background-image: url(img/background.webp)"
+      >
+        <!-- section 1-->
+        <section>
+          <div class="container min-w-fit">
+            <img
+              src="img/heroimg.webp"
+              alt="hero_img"
+              class="h-screen w-screen"
+            />
+            <h1 class="centered text-5xl font-extrabold text-brun">
+              Uperfekt er perfekt
+            </h1>
+          </div>
+        </section>
 
         <!-- section 2-->
         <section>
           <div class="grid h-screen w-screen place-content-center">
-            <h2 class="text-4xl font-bold">Pierre Falcke</h2>
+            <h2 class="text-5xl font-bold">Pierre Falcke</h2>
           </div>
 
           <div class="container min-w-fit">
@@ -49,7 +47,7 @@
               alt="hero_img"
               class="h-screen w-screen"
             />
-            <h3 class="low text-3xl font-extrabold text-gul">
+            <h3 class="low text-4xl font-extrabold text-gul">
               Du ved formentligt ikke hvem han er
             </h3>
           </div>
@@ -81,7 +79,7 @@
         <!-- section 3-->
         <section
           id="section3"
-          class="h-screen grid grid-cols-4"
+          class="grid h-screen grid-cols-4"
           style="background-image: url(img/stockimg.webp)"
         >
           <div class="parallaxcontainer col-start-2 col-end-4 grid-rows-3">
@@ -200,7 +198,7 @@
               >
                 <img
                   class="h-[400px] w-[600px]"
-                  src="img/slide2.webp"
+                  src="img/silde2.webp"
                   alt="foto"
                 />
               </li>
@@ -238,89 +236,124 @@
         <!-- section 6-->
         <section>
           <div class="grid h-screen w-screen place-content-center">
-            <h3 class="text-4xl font-bold text-brun">Analog, glitch art, og lomografi</h3>
+            <h3 class="text-4xl font-bold text-brun">
+              Analog, glitch art, og lomografi
+            </h3>
           </div>
-              <div class="grid items-center sticky top-0 h-screen w-100">
-                <img src="img/infoanalog.webp" alt="info" class="w-1/2 mx-auto p-10" />
-              </div>
-              <div class="grid items-center sticky top-0 h-screen w-100">
-                <h3 class="text-center w-1/2 mx-auto p-10 sticky  text-xl mt-28 font-bold">Analog fotografering</h3>
-              <p class="w-1/2 mx-auto sticky bg-slate-50 bg-opacity-60 mb-48 max-w-md text-sm p-5">
-                Fotografering med gode, gammeldags filmruller. Analog
-                fotografering stiger for tiden i popularitet, specielt blandt
-                unge, og prisen på filmruller og vintage-kameraer skyder i
-                vejret. Mange fotografer synes at film-fotografering er mere
-                ægte har mere “sjæl.” Analog fotografering er langsommmere,
-                hvert enkelt billede koster penge, og man bliver nødt til at
-                overveje motiv og lys grundigere før der skydes - tænk før du
-                trykker. <br />Analog fotografering kan gå galt mange steder i
-                processen, og det giver også mulighed for at eksperimentere med
-                “det uperfekte og uforudsigelige i processen.” Man kan f.eks.
-                skyde på for gamle filmruller, arbejde med forskellige teknikker
-                som “lens whacking” og filtre/ting foran objektivet, og man kan
-                pille ved de kemiske processer under fremkaldelse af filmen.
-              </p>
-            </div>
-            <div class="flex items-center sticky top-0 h-screen w-100">
-              <img src="img/glitch.webp" alt="glitch" class="w-1/2 mx-auto p-10" />
-            </div>
-             <div class="grid items-center sticky top-0 h-screen w-100">
-                <h3 class="text-center w-1/2 mx-auto p-10 sticky font-bold text-xl text-beige mt-28">Glitch Art</h3>
-            <p class="w-1/2 mx-auto sticky bg-slate-50 p-5 bg-opacity-60 mb-64 max-w-md text-sm">
+          <div class="w-100 sticky top-0 grid h-screen items-center">
+            <img
+              src="img/infoanalog.webp"
+              alt="info"
+              class="mx-auto w-1/2 p-10"
+            />
+          </div>
+          <div class="w-100 sticky top-0 grid h-screen items-center">
+            <h3
+              class="sticky mx-auto mt-28 w-1/2 p-10 text-center text-xl font-bold"
+            >
+              Analog fotografering
+            </h3>
+            <p
+              class="sticky mx-auto mb-48 w-1/2 max-w-md bg-slate-50 bg-opacity-60 p-5 text-sm"
+            >
+              Fotografering med gode, gammeldags filmruller. Analog
+              fotografering stiger for tiden i popularitet, specielt blandt
+              unge, og prisen på filmruller og vintage-kameraer skyder i vejret.
+              Mange fotografer synes at film-fotografering er mere ægte har mere
+              “sjæl.” Analog fotografering er langsommmere, hvert enkelt billede
+              koster penge, og man bliver nødt til at overveje motiv og lys
+              grundigere før der skydes - tænk før du trykker. <br />Analog
+              fotografering kan gå galt mange steder i processen, og det giver
+              også mulighed for at eksperimentere med “det uperfekte og
+              uforudsigelige i processen.” Man kan f.eks. skyde på for gamle
+              filmruller, arbejde med forskellige teknikker som “lens whacking”
+              og filtre/ting foran objektivet, og man kan pille ved de kemiske
+              processer under fremkaldelse af filmen.
+            </p>
+          </div>
+          <div class="w-100 sticky top-0 flex h-screen items-center">
+            <img
+              src="img/glitch.webp"
+              alt="glitch"
+              class="mx-auto w-1/2 p-10"
+            />
+          </div>
+          <div class="w-100 sticky top-0 grid h-screen items-center">
+            <h3
+              class="sticky mx-auto mt-28 w-1/2 p-10 text-center text-xl font-bold text-beige"
+            >
+              Glitch Art
+            </h3>
+            <p
+              class="sticky mx-auto mb-64 w-1/2 max-w-md bg-slate-50 bg-opacity-60 p-5 text-sm"
+            >
               Når der sker en teknisk fejl i et medie/en kommunikationskanal
               kaldes det en glitch. Glitch art går ud på at dyrke fejlene for at
               skabe kunst. En meget typisk glitch er små analoge eller digitale
               fejl i farvegengivelsen af billeder.
             </p>
           </div>
-          <div class="grid items-center sticky top-0 h-screen w-100">
-                <img src="img/lomografi.webp" alt="lomo" class="w-1/2 mx-auto p-10" />
-              </div>
-              <div class="grid items-center sticky top-0 h-screen w-100">
-                <h3 class="w-1/2 mx-auto p-10 sticky text-xl text-center font-bold mt-28">Lomografi</h3>
-              <p class="w-1/2 mx-auto sticky bg-slate-50 p-5 bg-opacity-60 mb-64 max-w-md text-sm">
-                Et lomografi er egentlig bare et fotografi skudt uden videre
-                omtanke, og med noget foto-udstyr af ret alternativ kvalitet.
-                Lomografier skydes ofte på gode, gammeldags filmruller, men kan
-                også skyde digitalt. Det kan måske lyde lidt
-                anti-fotograf-agtigt. Men en del foto-entusiaster dyrker den
-                slags, og ser det som en foto-genre eller endda en livsstil.
-              </p>
+          <div class="w-100 sticky top-0 grid h-screen items-center">
+            <img
+              src="img/lomografi.webp"
+              alt="lomo"
+              class="mx-auto w-1/2 p-10"
+            />
+          </div>
+          <div class="w-100 sticky top-0 grid h-screen items-center">
+            <h3
+              class="sticky mx-auto mt-28 w-1/2 p-10 text-center text-xl font-bold"
+            >
+              Lomografi
+            </h3>
+            <p
+              class="sticky mx-auto mb-64 w-1/2 max-w-md bg-slate-50 bg-opacity-60 p-5 text-sm"
+            >
+              Et lomografi er egentlig bare et fotografi skudt uden videre
+              omtanke, og med noget foto-udstyr af ret alternativ kvalitet.
+              Lomografier skydes ofte på gode, gammeldags filmruller, men kan
+              også skyde digitalt. Det kan måske lyde lidt anti-fotograf-agtigt.
+              Men en del foto-entusiaster dyrker den slags, og ser det som en
+              foto-genre eller endda en livsstil.
+            </p>
+          </div>
+          <div class="w-100 sticky top-0 flex h-screen items-center">
+            <h3
+              class="sticky mx-auto mb-96 w-1/2 bg-slate-50 p-10 text-center text-xl font-bold"
+            >
+              Lomo-regler
+            </h3>
+          </div>
+          <ul
+            class="sticky mx-auto grid w-1/2 list-disc grid-cols-2 gap-20 bg-slate-50 p-10 text-sm"
+          >
+            <div>
+              <li>Tag kameraet med overalt</li>
+              <li>Brug det på alle tidspunkter – dag og nat</li>
+              <li>
+                Lomografi er ikke en forstyrrelse af dit liv, men en del af det
+              </li>
+              <li>Prøv hofteskuddet!</li>
+              <li>Gå tæt på de objekter du har et ønske om at lomografere</li>
             </div>
-            <div class="flex items-center sticky top-0 h-screen w-100">
-              <h3 class="text-center w-1/2 mx-auto p-10 sticky font-bold text-xl mb-96 bg-slate-50">Lomo-regler</h3>
+            <div>
+              <li>Tænk ikke (William Firebrace)</li>
+              <li>Vær hurtig</li>
+              <li>Du behøver ikke at vide hvad du fanger på film på forhånd</li>
+              <li>Heller ikke efter</li>
+              <li>Du skal ikke bekymre dig om nogen regler</li>
             </div>
-              <ul class= "grid grid-cols-2 gap-20 list-disc w-1/2 mx-auto p-10 sticky bg-slate-50 text-sm ">
-                <div>
-                <li>Tag kameraet med overalt</li>
-                <li>Brug det på alle tidspunkter – dag og nat</li>
-                <li>
-                  Lomografi er ikke en forstyrrelse af dit liv, men en del af
-                  det
-                </li>
-                <li>Prøv hofteskuddet!</li>
-                <li>Gå tæt på de objekter du har et ønske om at lomografere</li>
-              </div>
-              <div>
-                <li>Tænk ikke (William Firebrace)</li>
-                <li>Vær hurtig</li>
-                <li>
-                  Du behøver ikke at vide hvad du fanger på film på forhånd
-                </li>
-                <li>Heller ikke efter</li>
-                <li>Du skal ikke bekymre dig om nogen regler</li>
-              </div>
-              </ul>
+          </ul>
         </section>
 
         <!-- section 7-->
-        
+
         <section>
-          <div class="grid place-content-center h-screen ">
-          <h2 class="text-brun text-4xl font-bold">En ny begyndelse</h2>
-        </div>
+          <div class="grid h-screen place-content-center">
+            <h2 class="text-4xl font-bold text-brun">En ny begyndelse</h2>
+          </div>
           <video autoplay muted loop>
-            <source src="video14sec.mp4"  type="video/mp4">
+            <source src="video14sec.mp4" type="video/mp4" />
           </video>
         </section>
       </div>
