--- a/src/index.html
+++ b/src/index.html
@@ -254,7 +254,7 @@
             <img
               src="img/infoanalog.webp"
               alt="info"
-              class="mx-auto w-1/2 p-10"
+              class="mx-auto w-2/3 p-10"
             />
           </div>
           <div class="w-100 sticky top-0 grid h-screen items-center">
@@ -285,7 +285,7 @@
             <img
               src="img/glitch.webp"
               alt="glitch"
-              class="mx-auto w-1/2 p-10"
+              class="mx-auto w-2/3 p-10"
             />
           </div>
           <div class="w-100 sticky top-0 grid h-screen items-center">
@@ -307,7 +307,7 @@
             <img
               src="img/lomografi.webp"
               alt="lomo"
-              class="mx-auto w-1/2 p-10"
+              class="mx-auto w-2/3 p-10"
             />
           </div>
           <div class="w-100 sticky top-0 grid h-screen items-center">
@@ -362,9 +362,38 @@
           <div class="grid h-screen place-content-center">
             <h2 class="text-4xl font-bold text-brun">En ny begyndelse</h2>
           </div>
-          <video autoplay muted loop>
-            <source src="video14sec.mp4" type="video/mp4" />
+          <video autoplay muted loop class="sticky top-0">
+            <source class="h-screen w-screen" src="video14sec.mp4" type="video/mp4" />
           </video>
+<div class="sticky top-0 h-screen">
+  <p>
+    Men Pierre er glad for sin beslutning. Indkomsten er lavere nu, men han har stadig 
+    lidt penge på kontoen, og studerer nu kunstfotografering på fotoskolen Fatamorgana. 
+    Han glæder sig over hver dags kunstneriske eksperimenter, og er for første gang i sit 
+    liv rigtig stolt af sit arbejde. Som Pierre selv udtrykker det: “Det interessante ligger 
+    i fejlen. Et foto med masser af fejl er interessant. Jeg eksperimenterer med udstyr og teknik, 
+    og skaber nye visuelle udtryk. Det uperfekte er perfekt.”
+
+  </p>
+</div>
+<div class="sticky top-0 h-screen">
+  <p>
+    Karrieren begynder også så småt også at gå den 
+    rette vej: Pierre er begyndt at sælge fotokunst på nettet, 
+    og har udgivet sin første foto-bog med titlen “Lidt i fem,” 
+    som er en fotografisk odyssé om at slæbe en brandert hjem i de tidlige morgentimer.
+     I forbindelse med udgivelsen af bogen, har han en udstilling på vej i det Kongelige
+      Biblioteks fotoudstilling.
+
+  </p>
+</div>
+<div class="sticky top-0 h-screen">
+  <p>
+    Som Pierre forklarer det:
+  </p>
+  <q>“Nu kan jeg leve livet igen. Jeg føler mig frisk. Jeg føler mig fri. Jeg føler mig genfødt.”</q>
+</div>
+
         </section>
       </div>
 
