--- a/src/index.html
+++ b/src/index.html
@@ -15,28 +15,28 @@
     />
     <link rel="stylesheet" href="https://use.typekit.net/iei0xqi.css" />
   </head>
-  <body
-    class="cursor-mincursor"
-
-  >
-  <main class="overflow-clip">
-    <div class="bg-brun [&_h2]:text-beige"
-    style="background-image: url(img/background-50.png);
-    background-size: cover;"
-    >
-      <!-- section 1-->
-      <section>
-        <div class="container min-w-fit">
-          <img
-            src="img/heroimg.webp"
-            alt="hero_img"
-            class="h-screen w-screen"
-          />
-          <h1 class="centered text-5xl font-extrabold text-brun">
-            Uperfekt er perfekt
-          </h1>
-        </div>
-      </section>
+  <body class="cursor-mincursor">
+    <main class="overflow-clip">
+      <div
+        class="bg-brun [&_h2]:text-beige"
+        style="
+          background-image: url(img/background-50.png);
+          background-size: cover;
+        "
+      >
+        <!-- section 1-->
+        <section>
+          <div class="container min-w-fit">
+            <img
+              src="img/heroimg.webp"
+              alt="hero_img"
+              class="h-screen w-screen"
+            />
+            <h1 class="centered text-5xl font-extrabold text-brun">
+              Uperfekt er perfekt
+            </h1>
+          </div>
+        </section>
 
         <!-- section 2-->
         <section>
@@ -80,40 +80,38 @@
           >
         </div>
         <!-- section 3-->
-        <section
-          id="section3"
-        >
-        <div class=" sticky top-0 h-screen" >
-          <img  src="img/stockimg.webp" alt="stockimg">
-        </div>
-        <div class="grid grid-cols-4 ">
-          <div class="parallaxcontainer h-screen">
-            <p>
-              Stock-fotos er billeder, der kan købes fra et foto-website. De
-              bruges af aviser, til markedsføring og som indhold på websites. En
-              licens til at bruge et foto koster typisk mellem 10 og 100 kroner,
-              alt afhængig af hvad de skal bruges til.
-            </p>
+        <section id="section3">
+          <div class="sticky top-0 h-screen">
+            <img src="img/stockimg.webp" alt="stockimg" />
           </div>
+          <div class="grid grid-cols-4">
+            <div class="parallaxcontainer h-screen">
+              <p>
+                Stock-fotos er billeder, der kan købes fra et foto-website. De
+                bruges af aviser, til markedsføring og som indhold på websites.
+                En licens til at bruge et foto koster typisk mellem 10 og 100
+                kroner, alt afhængig af hvad de skal bruges til.
+              </p>
+            </div>
 
-          <div class="parallaxcontainer h-screen">
-            <p class="bg-beige opacity-60">
-              Stock-fotos bliver ofte kritiseret for at være uden sjæl - det er
-              de der billeder af en læge i hvid kittel med stetoskop om halsen
-              på en meget hvid baggrund eller en meget glad dame fra
-              virksomhedens salgs- eller supportafdeling.
-            </p>
-          </div>
+            <div class="parallaxcontainer h-screen">
+              <p class="bg-beige opacity-60">
+                Stock-fotos bliver ofte kritiseret for at være uden sjæl - det
+                er de der billeder af en læge i hvid kittel med stetoskop om
+                halsen på en meget hvid baggrund eller en meget glad dame fra
+                virksomhedens salgs- eller supportafdeling.
+              </p>
+            </div>
 
-          <div class="parallaxcontainer h-screen">
-            <p>
-              Stock-fotos har eksisteret i mange år. Før branchen blev digital,
-              tilbød stock-foto virksomhederne billedmapper, der kunne bestilles
-              fra. Men stock-foto branchen var én af de tidlige til at blive
-              fuldt digitaliseret.
-            </p>
+            <div class="parallaxcontainer h-screen">
+              <p>
+                Stock-fotos har eksisteret i mange år. Før branchen blev
+                digital, tilbød stock-foto virksomhederne billedmapper, der
+                kunne bestilles fra. Men stock-foto branchen var én af de
+                tidlige til at blive fuldt digitaliseret.
+              </p>
+            </div>
           </div>
-        </div>
         </section>
 
         <!-- section 4-->
@@ -130,21 +128,23 @@
           </p>
           <img src="img/pierre-2.webp" alt="pierre-2" class="px-32" />
           <p class="mt-32 text-beige">
-            Pierre over til digital fotografering i starten af 2000’erne, da han
-            begyndte at studere fotografisk kommunikation på DMJX. Her åbnede en
-            ny verden sig: Reklamefotografering i studie, lyssætning og
-            manipulering af billeder i Photoshop blev hans nye stil. På det
+            Pierre gik over til digital fotografering i starten af 2000’erne, da
+            han begyndte at studere fotografisk kommunikation på DMJX. Her
+            åbnede en ny verden sig: Reklamefotografering i studie, lyssætning
+            og manipulering af billeder i Photoshop blev hans nye stil. På det
             tidspunkt var stock-foto industrien i starten af en revolution: De
             første online stock-foto websites begyndte at komme på markedet, men
             de store, etablerede spillere på markedet holdt lidt igen. Pierre så
             det for sig:
           </p>
-          <div class="mx-auto scrollzoom overflow-clip scrollzoomimg2 w-full">
-          <h3 class="mt-32 mb-32 text-center text-lg italic text-beige scrollzoom2">
-            “Om ganske få år er hele branchen digital, og dem der ikke hopper
-            med på den digitale vogn, lukker.”
-          </h3>
-        </div>
+          <div class="scrollzoom scrollzoomimg2 mx-auto w-full overflow-clip">
+            <h3
+              class="scrollzoom2 mt-32 mb-32 text-center text-lg italic text-beige"
+            >
+              “Om ganske få år er hele branchen digital, og dem der ikke hopper
+              med på den digitale vogn, lukker.”
+            </h3>
+          </div>
           <p class="mb-52 text-beige">
             Så Pierre gav sig selv en udfordring: At blive landets bedst
             sælgende stock-fotograf. Pierre lejede et gammelt, billigt
@@ -158,9 +158,13 @@
         </section>
       </div>
 
-      <div class="bg-beige [&_h2]:text-brun"
-      style="background-image: url(img/background-50.png);
-    background-size: cover;">
+      <div
+        class="bg-beige [&_h2]:text-brun"
+        style="
+          background-image: url(img/background-50.png);
+          background-size: cover;
+        "
+      >
         <!-- section 5-->
         <section>
           <h2
@@ -175,9 +179,19 @@
             fotos. Noget han kunne lave med stolthed. Pierre bestluttede sig for
             at droppe stock-fotos, og vende tilbage til rødderne.
           </p>
-          <div class="grid grid-cols-2 mx-auto scrollzoom overflow-clip scrollzoomimg w-full">
-            <img src="img/enskillevej1.webp" alt="img1" class="scrollzoom w-full"/>
-            <img src="img/enskillevej2.webp" alt="img2" class="scrollzoom w-full"/>
+          <div
+            class="scrollzoom scrollzoomimg mx-auto grid w-full grid-cols-2 overflow-clip"
+          >
+            <img
+              src="img/enskillevej1.webp"
+              alt="img1"
+              class="scrollzoom w-full"
+            />
+            <img
+              src="img/enskillevej2.webp"
+              alt="img2"
+              class="scrollzoom w-full"
+            />
           </div>
           <p class="leading-loose">
             Han søgte inspiration i analog fotografering, i Lomo-bevægelsen,
@@ -367,6 +381,15 @@
           </video>
         </section>
       </div>
+
+      <footer class="bg-beige text-center text-sm text-brun">
+        Denne webfeature er udarbejdet af: Evelina Falander, Mathea Gotthelf
+        Tranberg Hansen og Ida Krogh Pedersen, som en del af et skoleprojekt på
+        Københavns erhvervsakademi.
+      </footer>
+      <div
+        class="progress-bar fixed left-0 top-0 right-0 h-4 w-full origin-top-left bg-gul"
+      ></div>
 
       <script type="module" src="./main.js"></script>
     </main>
