--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
              </p>
             </div>
             <ul
-              class="fotogalleryinview text-center text-2xl font-semibold text-gul"
+              class="inview text-center text-2xl font-semibold text-gul"
             >
               <li class="py-7">Pierre sælger 2 millioner fotos om året.</li>
               <li class="py-7">Det svarer til én fotolicens hvert 16. sekund.</li>
@@ -73,15 +73,17 @@
             </ul>
           </div>
         </section>
-        <div class="grid h-screen snap-x snap-mandatory place-content-center">
+
+        <!-- section 3-->
+        <div class="grid h-screen place-content-center">
           <a
             href="#section3"
-            class="inline-block animate-pulse snap-mandatory snap-center text-3xl text-gul hover:cursor-mincursor active:cursor-mincurserclik"
+            class="inline-block myScale text-3xl text-gul hover:cursor-mincursor active:cursor-mincurserclik"
           >
             Læs mere om stock-fotos!</a
           >
         </div>
-        <!-- section 3-->
+        
         <section
           id="section3"
         >
@@ -379,7 +381,7 @@
 
   </p>
 </div>
-<div class="sticky top-0 h-screen col-start-2 col-end-4">
+<div class="sticky top-1 h-screen col-start-2 col-end-4">
   <p>
     Karrieren begynder også så småt også at gå den 
     rette vej: Pierre er begyndt at sælge fotokunst på nettet, 
@@ -390,7 +392,7 @@
 
   </p>
 </div>
-<div class="sticky top-0 h-screen col-start-2 col-end-4">
+<div class="sticky top-2 h-screen col-start-2 col-end-4">
   <p>
     Som Pierre forklarer det:
   </p>
